# RpcServer

./: .gitignore  CMakeLists.txt  README.md  build.sh  client.cpp  run_client.sh  run_server.sh  server.cpp
SubscribersLib/: ConnectionManager.cpp  ConnectionManager.h  Subscriber.cpp  Subscriber.h  ThreadSafeQueue.h
lib/: repositories.cpp  repositories.h  services.cpp  servises.h
proto/: testproto.proto
